--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,56 @@
-body {background: deepskyblue;}
+:root {
+    --font-family: "Open Sans", sans-serif;
+    --primary: #8e44ad;
+    --dark: #2c3e50;
+    --background-light:#ecf0f1;
+    --text-color:#212121;
+    --text-color-light:#ffffff;
+    --box-shadow:rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 2px 6px 2px;
+    --border:1px solid #eee;
+}
+
+* {
+    box-sizing: border-box; 
+}
+html, body {
+    margin:0; 
+    padding: 0; 
+    font-size:10px; 
+    font-family:var(--font-family);
+    background-color: var(--background-light);
+
+}
+
+
+.container {font-size: 1.6rem; min-height: 100vh; display: flex; flex-direction: column; color:var(--text-color);} 
+
+header {padding: 1.5rem;  background-color: var(--primary); box-shadow: var(--box-shadow);}
+.logo {font-size: 2rem; font-weight: 700; color:var(--)var(--text-color-light);}
+
+.content {
+    display:flex;
+    flex: 1; 
+    flex-direction:row; 
+    justify-content: center; 
+    align-items: center; 
+   }
+
+footer {
+    background: var(--dark);
+    display: flex;
+    flex-flow: row-reverse;
+    padding:1.5rem;
+    color:var(--text-color-light);
+}
+
+.todo-container {
+    padding: 1.5rem;
+    border:var(--border);
+    border-radius:3px;
+    background-color:white;
+    min-width:60rem;
+    min-height: 40rem;
+    box-shadow: var(--box-shadow);
+}
+
+h1 {text-align: center;}
