--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,4 +53,32 @@ footer {
     box-shadow: var(--box-shadow);
 }
 
-h1 {text-align: center;}
+h1 {text-align: center; margin-bottom:1rem;}
+
+.todo-form {display: flex; 
+flex-flow: row nowrap;
+align-items: center;}
+
+.todo-form input {
+    flex:1;
+    margin-right: .5rem;
+    border:var(--border);
+    border-radius: 3px;
+    padding:10px 15px;
+}
+
+.btn {
+    font-weight: 700;
+    color:var(--text-color);
+    font-size: 1.6rem;
+    border:0;
+    padding:10px 15px;
+    cursor:pointer;
+    background-color: white;
+    border-radius: 3px;
+    margin:0 5px;
+}
+.btn-primary { 
+    background-color: var(--primary); 
+    color:var(--text-color-light);
+}
