--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
     --text-color-light:#ffffff;
     --box-shadow:rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 2px 6px 2px;
     --border:1px solid #eee;
+    --danger : #e74c3c;
 }
 
 * {
@@ -81,4 +82,8 @@ align-items: center;}
 .btn-primary { 
     background-color: var(--primary); 
     color:var(--text-color-light);
+}
+
+.text-danger {
+    color:var(--danger); font-size: 1.2rem; font-weight:bold;
 }
