--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,12 +21,25 @@ html, body {
     background-color: var(--background-light);
 
 }
+ul {padding: 0; list-style-type: none;}
 
+.container {
+    font-size: 1.6rem; 
+    min-height: 100vh; 
+    display: flex; 
+    flex-direction: column; 
+    color:var(--text-color);
+} 
 
-.container {font-size: 1.6rem; min-height: 100vh; display: flex; flex-direction: column; color:var(--text-color);} 
-
-header {padding: 1.5rem;  background-color: var(--primary); box-shadow: var(--box-shadow);}
-.logo {font-size: 2rem; font-weight: 700; color:var(--)var(--text-color-light);}
+header {
+    padding: 1.5rem;  
+    background-color: var(--primary); 
+    box-shadow: var(--box-shadow);
+}
+.logo {
+    font-size: 2rem; 
+    font-weight: 700; 
+    color:var(--)var(--text-color-light);}
 
 .content {
     display:flex;
@@ -78,12 +91,19 @@ align-items: center;}
     background-color: white;
     border-radius: 3px;
     margin:0 5px;
+    box-shadow: var(--box-shadow);
 }
 .btn-primary { 
     background-color: var(--primary); 
     color:var(--text-color-light);
 }
-
+.btn-danger {background-color: var(--danger); color:var(--text-color-light);}
 .text-danger {
     color:var(--danger); font-size: 1.2rem; font-weight:bold;
 }
+
+.todo-item {flex-direction:  row; align-items: center; display: flex; margin-bottom:.5rem; padding: }
+.todo-item:nth-child(odd) {background-color: var(--background-light);}
+.todo-name {flex:1; margin-right:.5rem;}
+.btn-small {padding:.5rem 1rem; font-size:1.4rem;}
+.low-opacity {opacity:0.5;}
